Fjerner direkte DB migrering. Velger å rewinder CV topics